name:                tw-custserv
version:             0.1.0.0
synopsis:            See who cares for customer service
description:         Please see README.md
homepage:            https://github.com/jckdrpr/tw-custserv#readme
license:             BSD3
license-file:        LICENSE
author:              Sherub Thakur
maintainer:          sherub.thakur@gmail.com
copyright:           2016 Sherub Thakur
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TwitterCustServ
                     , TwitterAuth
                     , Types.Config
                     , Types.Query
                     , Types.Tweets
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , authenticate-oauth
                     , bytestring
                     , http-client
                     , http-types
                     , http-client-tls
  default-language:    Haskell2010

executable tw-custserv-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , tw-custserv
  default-language:    Haskell2010

test-suite tw-custserv-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tw-custserv
                     , hspec
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jckdrpr/tw-custserv
